[gd_scene load_steps=31 format=2]

[ext_resource path="res://Player/Shadow.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Characters/SmallGoblin.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Detection.tscn" type="PackedScene" id=3]
[ext_resource path="res://Combat/Box/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Weapons/Shuriken.png" type="Texture" id=5]
[ext_resource path="res://Enemies/EnemyScript.gd" type="Script" id=6]
[ext_resource path="res://Combat/Shuriken.tscn" type="PackedScene" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 1.0
height = 3.99999

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.0
height = 4.0

[sub_resource type="Animation" id=3]
resource_name = "Attack"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Weapon/Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 8, 0 ), Vector2( 0, 0 ), Vector2( -1, 0 ), Vector2( 16, 0 ), Vector2( 17, -6 ), Vector2( 8, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Weapon/Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -15.0, -30.0, 0.0, 15.0, 0.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "_shoot"
}, {
"args": [  ],
"method": "_shoot"
}, {
"args": [  ],
"method": "_shoot"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 12, 13 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_dead"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "Hit"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}

[sub_resource type="Animation" id=6]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=7]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6 ]
}

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Death"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Hit"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Run"

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=21]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=22]
states/Attack/node = SubResource( 8 )
states/Attack/position = Vector2( 325, 54 )
states/Death/node = SubResource( 9 )
states/Death/position = Vector2( -13, 37 )
states/Hit/node = SubResource( 10 )
states/Hit/position = Vector2( 480, 112 )
states/Idle/node = SubResource( 11 )
states/Idle/position = Vector2( 257, 188 )
states/Run/node = SubResource( 12 )
states/Run/position = Vector2( 112, 188 )
transitions = [ "Run", "Idle", SubResource( 13 ), "Idle", "Run", SubResource( 14 ), "Run", "Death", SubResource( 15 ), "Idle", "Death", SubResource( 16 ), "Attack", "Death", SubResource( 17 ), "Run", "Attack", SubResource( 18 ), "Idle", "Attack", SubResource( 19 ), "Attack", "Idle", SubResource( 20 ), "Attack", "Run", SubResource( 21 ) ]
start_node = "Idle"
end_node = "Death"
graph_offset = Vector2( -113, -19 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=23]

[node name="SmallGoblin" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 7
script = ExtResource( 6 )
rotating = true
bulletspeed = 7
BULLET = ExtResource( 7 )
max_health = 2
speed = 6

[node name="Shadow" parent="." instance=ExtResource( 1 )]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 15
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
rotation = 1.57079
shape = SubResource( 1 )

[node name="Weapon" type="Position2D" parent="."]
position = Vector2( 0, 2 )

[node name="Sprite" type="Sprite" parent="Weapon"]
texture = ExtResource( 5 )
offset = Vector2( 8, 0 )

[node name="Muzzle" type="Position2D" parent="Weapon"]
position = Vector2( 18, 0 )

[node name="Detection" parent="." instance=ExtResource( 3 )]

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 64
collision_mask = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 2 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 3 )
anims/Death = SubResource( 4 )
anims/Hit = SubResource( 5 )
anims/Idle = SubResource( 6 )
anims/Run = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 22 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 23 )

[node name="WanderTimer" type="Timer" parent="."]
one_shot = true

[node name="StateTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="HitTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="Detection" to="." method="_on_Detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_Detection_body_exited"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]

[editable path="Hurtbox"]
